--- a/pipelines/proyectos/appnodejs/jenkinsfile
+++ b/pipelines/proyectos/appnodejs/jenkinsfile
@@ -8,7 +8,7 @@ node {
    stage('test') {
      nodejs(nodeJSInstallationName: 'nodejs') {
        sh 'npm install --only=dev'
-       sh 'npm test'
+       sh 'npm test/test.js'
      }
    }
    stage('Docker Build & Push') {
