--- a/pipelines/proyectos/appnodejs/jenkinsfile
+++ b/pipelines/proyectos/appnodejs/jenkinsfile
@@ -1,6 +1,6 @@
 node {
    def gitcommit
-   stage('Verificación SCM') {
+   stage('Verificación SCM por jenkins') {
      checkout scm
      sh "git rev-parse --short HEAD > .git/commit-id"                        
      gitcommit = readFile('.git/commit-id').trim()
