--- a/pipelines/proyectos/appnodejs/jenkinsfile
+++ b/pipelines/proyectos/appnodejs/jenkinsfile
@@ -7,8 +7,8 @@ node {
    }
    stage('test') {
      nodejs(nodeJSInstallationName: 'nodejs') {
-       sh 'npm install --only=dev'
-       sh 'npm test'
+  //     sh 'npm install --only=dev'
+   //    sh 'npm test'
      }
    }
    stage('Docker Build & Push') {
